Fixed card bottom margin on mobile and fixed logo size on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -114,11 +114,15 @@ body{
         display: block;
         width: 60vw;
         margin: 0 auto;
+        margin-bottom: 60px;
     }
 }
 @media only screen and (max-width: 600px) {
     .logo{
-        width: 65vw;
+        width: 45vw;
+    }
+    .site-title{
+        font-size: 60px;
     }
     .card{
         width: 80vw;
